<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ed6a1a"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/left"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/myOrder"
            android:textColor="#fff"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="#bdb8b4">

        <TextView
            android:id="@+id/tv_stayPayment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/stayPayment"
            android:textSize="16sp"
            android:gravity="center_horizontal|center_vertical"/>

        <TextView
            android:id="@+id/tv_hasPayment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hasPayment"
            android:textSize="16sp"
            android:gravity="center_vertical|center_horizontal"/>

        <TextView
            android:id="@+id/tv_hasComplete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hasComplete"
            android:textSize="16sp"
            android:gravity="center_vertical|center_horizontal"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
