<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopCart"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"/>

        <TextView
            android:id="@+id/manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manager"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_marginTop="26dp"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>



    <ExpandableListView
        android:id="@+id/ex_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:groupIndicator="@null"
        android:layout_below="@id/head"
        android:layout_above="@id/bottom">

    </ExpandableListView>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true">

        <View
            android:id="@+id/line_head"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>

        <CheckBox
            android:id="@+id/all"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            style="@style/ck"/>

        <TextView
            android:id="@+id/selectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectAll"
            android:textColor="@color/gray"
            android:layout_toRightOf="@id/all"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/selectAll"
            android:layout_marginLeft="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥0"
            android:textColor="@color/red"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/total"/>

        <Button
            android:id="@+id/settlement"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6dp"
            android:layout_centerVertical="true"
            android:text="@string/settlement"
            android:textColor="@color/white"
            android:background="@drawable/btn_settlement"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6dp"
            android:layout_centerVertical="true"
            android:text="@string/delete"
            android:textColor="@color/red"
            android:background="@drawable/btn_delete"
            android:visibility="gone"/>

        <View
            android:id="@+id/line_bottom"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>

    </RelativeLayout>

</RelativeLayout>